# lsearch

./: .gitignore  .npmignore  CLAUDE.md  LICENSE  README.md  README.zh.md  install.js  install.py  package.json  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/commands/: kb.md  lsearch  lsearch-add  lsearch-add.md  lsearch-fetch  lsearch-fetch.md  lsearch-index  lsearch-index.md  lsearch-init.md  lsearch-stats  lsearch-stats.md  lsearch.md
.doc/: test.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
.lsearch/: config.yaml
.omc/: prd.json  progress.txt  project-memory.json
.omc/sessions/: 1205885a-8c9f-4225-bb19-e3249fe98e6f.json  1adf4e91-20dd-4748-b76a-7b89534bcc7e.json  25ff2ec4-85dc-4733-ada3-49db5da5f54e.json  379dbb1e-c117-4dbf-9be7-9e2c0cf9023d.json  43a2caba-9ee9-4faa-8bc1-d0f2e8d0d628.json  5060b8cb-7d9b-4627-87f3-af1f098adacf.json  5dd1d9e9-41d7-4a92-a783-4942b874361e.json  64b7d45a-5e3d-4a21-8be7-7df866505415.json  66040467-c7a4-4a08-bce3-fb33294048c2.json  7e513eff-4d69-4f36-840f-e476404932c1.json  809796e2-4f61-48e7-a58a-3ca651354d5b.json  9068bcc9-1c0d-4a6d-833c-9d53ff2fe87a.json  90be241e-5240-4875-b762-9d6ad933a609.json  9703ae50-ac31-4c0b-a2b0-aafc1f3a0449.json  ae62dec9-09a9-46cf-a174-7418c061c4f2.json  ce051d49-1821-48c2-8268-e79f5715603b.json  ddd0e306-90a1-4c69-b501-5e19e7d1f814.json  f613b991-e6e9-4563-b1eb-afecc8414962.json  f743a654-b6e1-4574-a847-334613a2adc6.json
.omc/state/: .hud-state.json.tmp.09727b2b-c97a-4715-928b-b85635740e0c  .hud-state.json.tmp.bf13f691-da0a-4c55-a1ba-1fc003873f8d  .hud-state.json.tmp.cf6e7425-368e-4697-9b9e-f4de6484db10  agent-replay-47edbfc9-0d09-4ad5-9b80-d9c56d5ae6ab.jsonl  agent-replay-ae62dec9-09a9-46cf-a174-7418c061c4f2.jsonl  (+7 more)
docs/: test.md
example-marketplace/: README.md
skill/: SKILL.md
skills-submission/: SUBMISSION.md
test/: test.md
tests/: test_cli.py  test_config.py  test_document_processor.py
(+30 files in other folders)
